cannot decide from shared prefs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="dummy_content">Main Activity, you have won the previous trophy</string>
     <string name="trophy_text">YAY TROPHY</string>
     <string name="title_activity_trophy">TrophyActivity</string>
+    <string name="preference_file">SwipyPrefs</string>
+    <string name="first_trophy">First_trophy</string>
 
 </resources>
