--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,8 @@
     <string name="title_activity_question_three">QuestionThreeActivity</string>
     <string name="title_activity_question">QuestionActivity</string>
     <string name="title_activity_end">EndActivity</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
 </resources>
